--- a/Homepage/homepage.html
+++ b/Homepage/homepage.html
@@ -37,7 +37,7 @@
 
       // Static guides list (locked to two options)
       const GUIDES = [
-        { title: 'Storm', slug: '../Storm/Storm.html' },
+        { title: 'Stomr', slug: '../Storm/Storm.html' },
         { title: 'Hurricane', slug: '../Hurricane/Hurricane.html' },
         { title: 'Smart Wash', slug: '../Smart%20Wash/Smartwash.html' },
         { title: 'Validator', slug: '../Validator/Validator.html' }
@@ -60,7 +60,7 @@
             a.className = 'preview-link';
             // Preview image mapping for the two static guides
             const previewMap = {
-              'Storm':'../Assets/Screenshot%202025-11-19%20at%202.19.29%E2%80%AFpm.png',
+              'Stomr':'../Assets/Screenshot%202025-11-19%20at%202.19.29%E2%80%AFpm.png',
               'Hurricane':'../Assets/Screenshot%202025-11-19%20at%202.18.36%E2%80%AFpm.png',
               'Smart Wash':'../Assets/Screenshot%202025-11-19%20at%202.18.56%E2%80%AFpm.png',
               'Validator':'../Assets/Screenshot%202025-11-19%20at%202.19.10%E2%80%AFpm.png'
