--- a/Storm/Storm.html
+++ b/Storm/Storm.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Storm Operators Manual</title>
+  <title>Stomr Operators Manual</title>
   <style>
     @font-face{
       font-family:'VCR OSD Mono';
@@ -40,14 +40,14 @@
   <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
   <script>(function(){const t=sessionStorage.getItem('authToken');if(!t){window.location.href='../Portal%20Page/MrMagic.html';}})();</script>
   <a class="back-btn" href="../Homepage/homepage.html" aria-label="Back to manuals index">← Back</a>
-  <section class="manual-viewer" aria-label="Storm Operators Manual">
-    <h2 class="manual-viewer__title">Storm</h2>
+  <section class="manual-viewer" aria-label="Stomr Operators Manual">
+    <h2 class="manual-viewer__title">Stomr</h2>
     <div class="manual-viewer__frame">
       <!-- Fallback object (desktop native viewer); hidden on small screens when pdf.js loads -->
       <object id="pdfObjectFallback" data="../Assets/STORM%20OPERATORS%20MANUAL%2037.pdf#view=FitH" type="application/pdf">
         <p>Cannot display PDF. <a href="../Assets/STORM%20OPERATORS%20MANUAL%2037.pdf">Open manual.</a></p>
       </object>
-      <div id="pdfPages" aria-label="Storm manual full pages" style="display:none;"></div>
+      <div id="pdfPages" aria-label="Stomr manual full pages" style="display:none;"></div>
       <div id="mobilePdfControls" class="pdf-controls" style="display:none;">
         <button id="prevPage" disabled>Prev</button>
         <span id="pageIndicator" class="page-indicator">Page 1 / 1</span>
