--- a/Validator/Validator.html
+++ b/Validator/Validator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Storm Operators Manual</title>
+  <title>Validator Operators Manual</title>
   <style>
     @font-face{
       font-family:'VCR OSD Mono';
@@ -39,7 +39,7 @@
   <script>sessionStorage.setItem('claudeSonnet45','enabled');</script>
   <script>(function(){const t=sessionStorage.getItem('authToken');if(!t){window.location.href='../Portal%20Page/MrMagic.html';}})();</script>
   <a class="back-btn" href="../Homepage/homepage.html" aria-label="Back to manuals index">← Back</a>
-  <section class="manual-viewer" aria-label="Storm Operators Manual">
+  <section class="manual-viewer" aria-label="Validator Operators Manual">
     <h2 class="manual-viewer__title">Validator</h2>
     <div class="manual-viewer__frame">
         <object id="pdfObjectFallback" data="../Assets/Storm%20Nayax%20Validator%2006.pdf#view=FitH" type="application/pdf">
@@ -76,88 +76,91 @@
           pagesContainer.style.display='block';
           pdfjsLib.GlobalWorkerOptions.workerSrc='https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.0.379/pdf.worker.min.js';
           pdfjsLib.getDocument(pdfUrl).promise.then(doc=>{
-            let currentPage=1; const total=doc.numPages; const frame=document.querySelector('.manual-viewer__frame');
+            let currentPage=1;
+            const total=doc.numPages;
+            const frame=document.querySelector('.manual-viewer__frame');
             const controls=document.getElementById('mobilePdfControls');
             const prevBtn=document.getElementById('prevPage');
             const nextBtn=document.getElementById('nextPage');
             const indicator=document.getElementById('pageIndicator');
-            const zoomOutBtn = document.getElementById('zoomOut');
-            const zoomInBtn = document.getElementById('zoomIn');
-            const zoomResetBtn = document.getElementById('zoomReset');
-            const loadingEl = document.getElementById('pdfLoading');
+            const zoomOutBtn=document.getElementById('zoomOut');
+            const zoomInBtn=document.getElementById('zoomIn');
+            const zoomResetBtn=document.getElementById('zoomReset');
+            const loadingEl=document.getElementById('pdfLoading');
             controls.style.display='flex';
-            let baseScale=1; let zoomFactor=1; const MIN_ZOOM=0.5; const MAX_ZOOM=2.0;
-            indicator.textContent='Loading…';
+            indicator.textContent='Preparing…';
 
-            const multiMode = true;
-            if(multiMode){
-              prevBtn.style.display='none';
-              nextBtn.style.display='none';
-              zoomOutBtn.style.display='none';
-              zoomInBtn.style.display='none';
-              zoomResetBtn.style.display='none';
-              indicator.textContent='Loading pages…';
-                function computeScale(page){
-                  const baseViewport=page.getViewport({scale:1});
-                  const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
-                  let scale=availWidth/baseViewport.width; if(scale>1.2) scale=1.2; return scale;
-                }
-                let renderedCount=0;
-                function renderSequential(num){
-                  if(num>total){ indicator.textContent=`All ${total} pages loaded`; loadingEl.style.display='none'; updateControlsMulti(); return; }
-                  loadingEl.style.display='block';
-                  doc.getPage(num).then(page=>{
-                    const scale=computeScale(page);
-                    const viewport=page.getViewport({scale});
-                    const canvas=document.createElement('canvas'); const ctx=canvas.getContext('2d'); const ratio=window.devicePixelRatio||1;
-                    canvas.width=viewport.width*ratio; canvas.height=viewport.height*ratio; canvas.style.width=viewport.width+'px'; canvas.style.height=viewport.height+'px';
-                    pagesContainer.appendChild(canvas);
-                    page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{ renderedCount++; indicator.textContent=`Loaded ${renderedCount} / ${total}`; requestAnimationFrame(()=>renderSequential(num+1)); });
-                  }).catch(err=>{ console.error('[PDF] page render error',num,err); requestAnimationFrame(()=>renderSequential(num+1)); });
-                }
-                console.log('[PDF] Multi-page mode enabled. Total pages=', total);
-                renderSequential(1);
+            const lazyMode=true;
+            if(lazyMode){
+              const pageSlots=[]; const observed=new Set(); let loadedCount=0;
+              for(let i=1;i<=total;i++){
+                const slot=document.createElement('div');
+                slot.className='pdf-page-slot';
+                slot.style.minHeight='420px';
+                slot.style.margin='0 0 28px';
+                slot.style.position='relative';
+                slot.dataset.page=i;
+                slot.innerHTML='<div class="pdf-page-loading" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;font-size:12px;color:#555;">Loading page '+i+'…</div>';
+                pagesContainer.appendChild(slot);
+                pageSlots.push(slot);
+              }
+              pagesContainer.style.padding='12px 0 60px';
+              const io=new IntersectionObserver(entries=>{
+                entries.forEach(entry=>{
+                  if(entry.isIntersecting){
+                    const slot=entry.target; const pNum=parseInt(slot.dataset.page,10);
+                    if(!observed.has(pNum)){ observed.add(pNum); renderPageLazy(pNum,slot); }
+                  }
+                });
+              },{root:frame, rootMargin:'200px 0px 200px 0px', threshold:0});
+              function computeScaleForPage(page){
+                const baseViewport=page.getViewport({scale:1});
+                const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
+                let scale=availWidth/baseViewport.width; if(scale>1.15) scale=1.15; return scale;
+              }
+              function renderPageLazy(num,slot){
+                loadingEl.style.display='block';
+                doc.getPage(num).then(page=>{
+                  const scale=computeScaleForPage(page);
+                  const viewport=page.getViewport({scale});
+                  const canvas=document.createElement('canvas');
+                  const ctx=canvas.getContext('2d');
+                  const ratio=window.devicePixelRatio||1;
+                  canvas.width=viewport.width*ratio;
+                  canvas.height=viewport.height*ratio;
+                  canvas.style.width=viewport.width+'px';
+                  canvas.style.height=viewport.height+'px';
+                  slot.innerHTML='';
+                  slot.appendChild(canvas);
+                  page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{
+                    loadedCount++;
+                    indicator.textContent=`Page ${currentPage} / ${total} (Loaded ${loadedCount})`;
+                    if(loadedCount===total){ loadingEl.style.display='none'; }
+                  });
+                }).catch(err=>{
+                  console.error('[PDF] lazy render error page',num,err);
+                  slot.querySelector('.pdf-page-loading')?.textContent='Failed to load page '+num;
+                });
+              }
+              pageSlots.forEach(s=>io.observe(s));
+              function updateControlsLazy(){
+                prevBtn.disabled=currentPage<=1;
+                nextBtn.disabled=currentPage>=total;
+                zoomOutBtn.disabled=true; zoomInBtn.disabled=true; zoomResetBtn.disabled=true;
+                indicator.textContent=`Page ${currentPage} / ${total} (Loaded ${loadedCount})`;
+              }
+              function scrollTo(num){ if(num<1||num>total) return; currentPage=num; pageSlots[num-1].scrollIntoView({behavior:'smooth',block:'start'}); updateControlsLazy(); }
+              prevBtn.addEventListener('click',()=>scrollTo(currentPage-1));
+              nextBtn.addEventListener('click',()=>scrollTo(currentPage+1));
+              pagesContainer.addEventListener('scroll',()=>{
+                const top=pagesContainer.scrollTop; let best=currentPage; let bestDelta=Infinity;
+                pageSlots.forEach((slot,i)=>{ const d=Math.abs(slot.offsetTop-top); if(d<bestDelta){ bestDelta=d; best=i+1; } });
+                if(best!==currentPage){ currentPage=best; updateControlsLazy(); }
+              });
+              updateControlsLazy();
+              console.log('[PDF] Lazy mode initialized. Total pages=', total);
               return;
             }
-            function updateControls(){
-              indicator.textContent = `Page ${currentPage} / ${total}`;
-              prevBtn.disabled = currentPage === 1;
-              nextBtn.disabled = currentPage === total;
-              zoomOutBtn.disabled = zoomFactor <= MIN_ZOOM + 0.001;
-              zoomInBtn.disabled = zoomFactor >= MAX_ZOOM - 0.001;
-              zoomResetBtn.disabled = Math.abs(zoomFactor - 1) < 0.001;
-            }
-            function computeBaseScale(page){
-              const baseViewport=page.getViewport({scale:1});
-              const availWidth=(frame?frame.clientWidth:window.innerWidth)-32;
-              let scale=availWidth/baseViewport.width; if(scale>1.2) scale=1.2;
-              baseScale=scale; return scale*zoomFactor;
-            }
-            function renderPage(num){
-              pagesContainer.innerHTML='';
-              loadingEl.style.display='block';
-              console.log('[PDF] renderPage request',num,'of total',total);
-              doc.getPage(num).then(page=>{
-                const scale=computeBaseScale(page);
-                const viewport=page.getViewport({scale});
-                const canvas=document.createElement('canvas'); const ctx=canvas.getContext('2d'); const ratio=window.devicePixelRatio||1;
-                canvas.width=viewport.width*ratio; canvas.height=viewport.height*ratio; canvas.style.width=viewport.width+'px'; canvas.style.height=viewport.height+'px';
-                pagesContainer.appendChild(canvas);
-                page.render({canvasContext:ctx,viewport,transform:[ratio,0,0,ratio,0,0]}).promise.then(()=>{ loadingEl.style.display='none'; updateControls(); console.log('[PDF] render complete page',num); });
-              });
-            }
-            prevBtn.addEventListener('click',()=>{ if(currentPage>1){ currentPage--; renderPage(currentPage); } });
-            nextBtn.addEventListener('click',()=>{ if(currentPage<total){ currentPage++; renderPage(currentPage); } });
-            pagesContainer.addEventListener('click',()=>{ if(currentPage<total){ currentPage++; renderPage(currentPage); } });
-            zoomOutBtn.addEventListener('click',()=>{ if(zoomFactor>MIN_ZOOM){ zoomFactor=Math.max(MIN_ZOOM, zoomFactor-0.1); renderPage(currentPage);} });
-            zoomInBtn.addEventListener('click',()=>{ if(zoomFactor<MAX_ZOOM){ zoomFactor=Math.min(MAX_ZOOM, zoomFactor+0.1); renderPage(currentPage);} });
-            zoomResetBtn.addEventListener('click',()=>{ zoomFactor=1; renderPage(currentPage); });
-            let resizeTimer=null; window.addEventListener('resize',()=>{ if(!usePdfJs) return; clearTimeout(resizeTimer); resizeTimer=setTimeout(()=>{ renderPage(currentPage); },250); });
-            let touchStartX=null; let touchStartY=null;
-            frame.addEventListener('touchstart',e=>{ const t=e.changedTouches[0]; touchStartX=t.clientX; touchStartY=t.clientY; });
-            frame.addEventListener('touchend',e=>{ const t=e.changedTouches[0]; if(touchStartX==null) return; const dx=t.clientX-touchStartX; const dy=t.clientY-touchStartY; if(Math.abs(dx)>50 && Math.abs(dy)<40){ if(dx<0 && currentPage<total){ currentPage++; renderPage(currentPage); } else if(dx>0 && currentPage>1){ currentPage--; renderPage(currentPage); } } touchStartX=null; });
-            console.log('[PDF] Document loaded total pages =', total);
-            renderPage(currentPage);
           }).catch(err=>{ console.error('[PDFJS] Validator render fail',err); if(fallbackObj) fallbackObj.style.display='block'; pagesContainer.style.display='none'; });
         })();
       </script>
